--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /.vscode
 /labor4
+/jftt2019-testy/
 /kompilator/maszyna_wirtualna/lexer.cc
 /kompilator/maszyna_wirtualna/lexer.o
 /kompilator/maszyna_wirtualna/main.o
