--- a/kompilator/src/Makefile
+++ b/kompilator/src/Makefile
@@ -5,7 +5,7 @@ all:	clean compiler
 compiler: 
 	bison -d -o parser.c parser.y
 	flex -o lexer.c lexer.l
-	$(gcc) lexer.c parser.c symbol-table.cpp compiler.cpp -o compiler
+	$(gcc) lexer.c parser.c symbol-table.cpp compiler.cpp -o kompilator
 
 clean: 
-	rm -f lexer.c lexer.o parser.c parser.h parser.o compiler
+	rm -f lexer.c lexer.o parser.c parser.h parser.o kompilator
